// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interval Middleware should handle an action with "interval" key 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "key": "SOME_KEY",
        "payload": Object {
          "test": true,
        },
        "type": "SOME_TYPE",
      },
    ],
    Array [
      Object {
        "intervalID": 1,
        "key": "SOME_KEY",
        "type": "START_INTERVAL",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Interval Middleware should pass action to next 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "type": "SOME_TYPE",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
